# pyexec

./: .gitignore  DEPLOY.md  Dockerfile  Dockerfile.base  LICENSE.txt  README.md  build-local-arm64.sh  docker-compose.dind.yml  docker-compose.platform.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml  test.yml
src/pyexec/: base-requirements.txt  config.py  main.py
tests/: conftest.py  test_app.py
